# firecrawl-scraper

./: README.md
advanced-agent/: README.md  example_usage.py  main.py  pyproject.toml  test_agent.py
advanced-agent/src/: firecrawl.py  models.py  prompts.py  utils.py  workflow.py
advanced-agent/src/advanced_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
simple-agent/: main.py  pyproject.toml
task_automation/: README.md  env.example  example_enhanced.py  example_usage.py  pyproject.toml  requirements.txt  setup.py  test_agent.py
task_automation/atreides-ui/: package-lock.json  package.json
task_automation/atreides-ui/src/: App.jsx
task_automation/vc_form_agent/: __init__.py  main.py
task_automation/vc_form_agent/core/: agent.py  browser.py  form_analyzer.py
task_automation/vc_form_agent/templates/: base.py  ycombinator.py
task_automation/vc_form_agent/utils/: ai_helper.py  data_manager.py  validators.py
