[project]
name = "vc-form-agent"
version = "0.1.0"
description = "AI agent for automatically filling VC application forms"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "selenium>=4.15.0",
    "playwright>=1.40.0",
    "openai>=1.3.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "pandas>=2.1.0",
    "numpy>=1.24.0",
    "pillow>=10.0.0",
    "webdriver-manager>=4.0.0",
    "undetected-chromedriver>=3.5.0",
    "fake-useragent>=1.4.0",
    "python-decouple>=3.8",
    "loguru>=0.7.0",
    "rich>=13.7.0",
    "click>=8.1.0",
    "jinja2>=3.1.0",
    "markdown>=3.5.0"
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.7.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true 